# storopt

./: .env.example  .gitignore  CLAUDE.md  DOCUMENTATION.md  PIPELINE.md  README.md  pyproject.toml
configs/: default.yaml  horns_rev1.yaml  horns_rev1_40mw.yaml  sarimax_params.yaml
report/: _executed_multi_day_knn.ipynb  build_knn_edge_section.py  build_knn_report.py  build_multi_day_report.py  generate_report.py  html_to_pdf.py  patch_mathjax.py  render_advisor_pdf.py  run_30_day.py  run_30_day_knn.py  storopt_advisor_report.ipynb
src/storopt/: __init__.py  cli.py  run.py
src/storopt/config/: loader.py  schema.py
src/storopt/evaluation/: engine.py  metrics.py
src/storopt/ingestion/: base.py  cache.py  panel.py
src/storopt/ingestion/adapters/: energinet.py  entsoe.py  open_meteo.py
src/storopt/optimizer/: base.py  deterministic.py  milp.py  registry.py  types.py
src/storopt/scenarios/: base.py  knn.py  naive.py  registry.py  sarimax.py  types.py
tests/: _executed_stress.ipynb  build_stress_test_report.py  edge_cases.py  edge_results.md  sanity_cases.py  sanity_results.md  stochastic_stress.py  test_real_data.py
